Only headers visible for unsigned emails attached to signed emails
With evolution 3.49.2-3 and evolution-data-server 3.49.2-4 from Debian trixie, only headers (no body) are shown for unsigned emails attached to OpenPGP-signed emails.
It seems like the "insecure parts detection" is applied to all the attachments too, and hides the unsigned parts of those attachments.
On IRC I have sent @mcrha a mail that is able to reproduce this problem.