I#2488 - Only headers visible for unsigned emails attached to signed emails

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2488