src/mail/e-mail-reader-utils.c
@@ -32,6 +32,7 @@
 
 #include <libemail-engine/libemail-engine.h>
 
+#include <em-format/e-mail-formatter-utils.h>
 #include <em-format/e-mail-parser.h>
 #include <em-format/e-mail-part-utils.h>
 
@@ -1612,37 +1613,22 @@ mail_reader_print_parse_message_cb (GObject *source_object,
 
 	if (e_mail_display_get_skip_insecure_parts (mail_display)) {
 		GList *head, *link;
+		GHashTable *secured_message_ids;
 		GQueue queue = G_QUEUE_INIT;
-		gboolean skip_insecure_parts = FALSE;
 
 		e_mail_part_list_queue_parts (part_list, NULL, &queue);
 
 		head = g_queue_peek_head_link (&queue);
+		secured_message_ids = e_mail_formatter_utils_extract_secured_message_ids (head);
 
-		for (link = head; link && !skip_insecure_parts; link = g_list_next (link)) {
-			EMailPart *part = E_MAIL_PART (link->data);
-
-			if (part->is_hidden || e_mail_part_get_is_attachment (part))
-				continue;
-
-			skip_insecure_parts = e_mail_part_has_validity (part);
-		}
-
-		if (skip_insecure_parts) {
+		if (secured_message_ids) {
 			gboolean has_encrypted_part = FALSE;
 
 			for (link = head; link != NULL; link = g_list_next (link)) {
 				EMailPart *part = E_MAIL_PART (link->data);
 
-				if (!e_mail_part_get_id (part) ||
-				    part->is_hidden ||
-				    g_strcmp0 (e_mail_part_get_id (part), ".message") == 0 ||
-				    e_mail_part_id_has_suffix (part, ".secure_button") ||
-				    e_mail_part_id_has_suffix (part, ".rfc822") ||
-				    e_mail_part_id_has_suffix (part, ".rfc822.end") ||
-				    e_mail_part_id_has_suffix (part, ".headers")) {
+				if (!e_mail_formatter_utils_consider_as_secured_part (part, secured_message_ids))
 					continue;
-				}
 
 				if (!e_mail_part_has_validity (part)) {
 					part->is_hidden = TRUE;
@@ -1664,6 +1650,8 @@ mail_reader_print_parse_message_cb (GObject *source_object,
 
 		while (!g_queue_is_empty (&queue))
 			g_object_unref (g_queue_pop_head (&queue));
+
+		g_clear_pointer (&secured_message_ids, g_hash_table_destroy);
 	}
 
 	printer = e_mail_printer_new (part_list, remote_content);
